[gd_scene load_steps=15 format=2]

[ext_resource path="res://UI/inventory/crafting.PNG" type="Texture" id=1]
[ext_resource path="res://UI/inventory/inventoryBackground.png" type="Texture" id=2]
[ext_resource path="res://baseTheme.tres" type="Theme" id=3]
[ext_resource path="res://UI/inventory/inventory.gd" type="Script" id=4]
[ext_resource path="res://UI/inventory/drill.png" type="Texture" id=5]
[ext_resource path="res://UI/inventory/ship.png" type="Texture" id=6]
[ext_resource path="res://UI/inventory/craftingDisplay.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/inventory/clostButton.PNG" type="Texture" id=8]
[ext_resource path="res://UI/inventory/closeButtonHover.PNG" type="Texture" id=9]
[ext_resource path="res://UI/inventory/inventory.PNG" type="Texture" id=10]
[ext_resource path="res://UI/inventory/craftingHover.png" type="Texture" id=11]
[ext_resource path="res://UI/inventory/inventoryHover.png" type="Texture" id=12]
[ext_resource path="res://UI/inventory/shipHover.png" type="Texture" id=13]
[ext_resource path="res://UI/inventory/drillHover.png" type="Texture" id=14]

[node name="inventoryMain" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1029.0
margin_bottom = 602.0
color = Color( 0, 0, 0, 0.301961 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 2 )

[node name="quitBttn" type="TextureButton" parent="."]
margin_left = 89.0
margin_top = 54.0
margin_right = 128.0
margin_bottom = 93.0
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="."]
margin_left = 140.0
margin_top = 55.0
margin_right = 269.0
margin_bottom = 91.0
theme = ExtResource( 3 )
text = "Inventory"

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 860.0
margin_top = 86.0
margin_right = 910.0
margin_bottom = 136.0
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 861.0
margin_top = 203.0
margin_right = 911.0
margin_bottom = 253.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="itemList" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="craftMenu" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="ScrollContainer" type="ScrollContainer" parent="craftMenu"]
margin_left = 143.0
margin_top = 161.0
margin_right = 614.0
margin_bottom = 529.0

[node name="craftMenuList" type="VBoxContainer" parent="craftMenu/ScrollContainer"]
margin_right = 357.0
margin_bottom = 75.0
custom_constants/separation = 56

[node name="HBoxContainer" type="HBoxContainer" parent="craftMenu/ScrollContainer/craftMenuList"]
margin_right = 357.0
margin_bottom = 75.0
custom_constants/separation = 75
alignment = 1

[node name="drillUpgrade" type="TextureButton" parent="craftMenu/ScrollContainer/craftMenuList/HBoxContainer"]
margin_right = 141.0
margin_bottom = 75.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 14 )

[node name="shipUpgrade" type="TextureButton" parent="craftMenu/ScrollContainer/craftMenuList/HBoxContainer"]
margin_left = 216.0
margin_right = 357.0
margin_bottom = 75.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 13 )

[node name="upgradeViewer" parent="craftMenu" instance=ExtResource( 7 )]
margin_left = 566.0
margin_top = 161.0
margin_right = 782.0
margin_bottom = 498.0

[connection signal="pressed" from="quitBttn" to="." method="_on_TextureButton4_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="craftMenu/ScrollContainer/craftMenuList/HBoxContainer/drillUpgrade" to="." method="_on_drillUpgrade_pressed"]
[connection signal="pressed" from="craftMenu/ScrollContainer/craftMenuList/HBoxContainer/shipUpgrade" to="." method="_on_shipUpgrade_pressed"]
